3.2.1/_sources/gallery/userdemo/demo_gridspec01.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_userdemo_demo_gridspec01.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_demo_gridspec01.py:


=================
subplot2grid demo
=================

This example demonstrates the use of `.pyplot.subplot2grid` to generate
subplots.  Using `.GridSpec`, as demonstrated in
:doc:`/gallery/userdemo/demo_gridspec03` is generally preferred.



.. image:: /gallery/userdemo/images/sphx_glr_demo_gridspec01_001.png
    :class: sphx-glr-single-img






.. code-block:: default


    import matplotlib.pyplot as plt


    def annotate_axes(fig):
        for i, ax in enumerate(fig.axes):
            ax.text(0.5, 0.5, "ax%d" % (i+1), va="center", ha="center")
            ax.tick_params(labelbottom=False, labelleft=False)


    fig = plt.figure()
    ax1 = plt.subplot2grid((3, 3), (0, 0), colspan=3)
    ax2 = plt.subplot2grid((3, 3), (1, 0), colspan=2)
    ax3 = plt.subplot2grid((3, 3), (1, 2), rowspan=2)
    ax4 = plt.subplot2grid((3, 3), (2, 0))
    ax5 = plt.subplot2grid((3, 3), (2, 1))

    annotate_axes(fig)

    plt.show()


.. _sphx_glr_download_gallery_userdemo_demo_gridspec01.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: demo_gridspec01.py <demo_gridspec01.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: demo_gridspec01.ipynb <demo_gridspec01.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
